45
================

23/09/21 Fix bad type coercion in clone/update onlineform.AutoProcess
22/09/21 Add Rabies Tag column to vaccination views
17/09/21 Option to prefix animal codes during import #1027
15/09/21 Copy the current vet from template animals
15/09/21 Support comments field on all online form records
14/09/21 Option to allow auto processing of online forms #1051
13/09/21 A 0 value in Petfinder notGood fields indicates yes
10/09/21 Fix dead incident diary links
10/09/21 Button to convert trial adoptions to full adoption #1030
10/09/21 Emblem for courtesy listing flag #1036
09/09/21 Add Country/OwnerCountry wordkey
09/09/21 Do not split annual adoptions by default, rearrange logically
08/09/21 Fosterer email should not include ungiven from non-active regimens
07/09/21 Add locale for en_TZ (Tanzania)
06/09/21 Online form: create incident not using default
04/09/21 Update diary link info for non-animals when record is updated #1029
04/09/21 Warning when adopting an animal with outstanding meds #959
03/09/21 Ability to make rota work types inactive #1050
02/09/21 Add radius attribute to SavourLife
30/08/21 PetFinder allow additional fields for colors/coat_length #767
30/08/21 Remove use of HTML entities at the backend #1038
30/08/21 Use ILIKE when available for performance/indexes #1038
30/08/21 Support for translating db html entities #1038
29/08/21 Remove cruft and support for python 2 #1037
29/08/21 Fix log sorting with date/time #1047
26/08/21 Adoption self-checkout service #784
25/08/21 Animal find/search updates ages in results
23/08/21 Refactor sign_document_page into separate js file
20/08/21 Option to email online forms to adoption coordinator #1042
20/08/21 Adoptable status flag for reporting #1045
19/08/21 Disable non-functional report toolbar for charts #1041
16/08/21 Add current vet as a suggested email from animal
12/08/21 Annual figures return count including non-adoptions
11/08/21 Show receipt numbers with transactions